--- a/DigiChamps/Views/School/ExamType.cshtml
+++ b/DigiChamps/Views/School/ExamType.cshtml
@@ -3,7 +3,22 @@
     ViewBag.Title = "ExamType";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
-
+@{
+    string message = TempData.ContainsKey("Message") ? TempData["Message"].ToString() : string.Empty;
+    string styleDisplayValue = "none";    
+    string MessageType = TempData.ContainsKey("MessageType") ? TempData["MessageType"].ToString() : "danger";
+    string PageModeTitle = Model != null && Model.ExamTypeId != null ? "Add Exam Type" : "Edit Exam Type";
+    string mode = "";
+    if (!string.IsNullOrEmpty(message))
+    {
+        //MessageType = ViewBag.MessageType.ToString();
+        styleDisplayValue = "block";
+    }
+    else
+    {
+        styleDisplayValue = "none";
+    }
+}
 
 @using (Html.BeginForm("ExamType", "School", FormMethod.Post, new { @class = "form-horizontal", id = "validation-form" }))
 {
@@ -12,9 +27,16 @@
             <div class="col-md-12">
                 <div class="box">
                     <div class="box-title">
-                        <h3><i class="fa fa-file"></i> ExamType</h3>
+                        <h3><i class="fa fa-file"></i> @PageModeTitle</h3>
 
                     </div>
+                    @if (!string.IsNullOrEmpty(@message))
+                    {
+                        <div class="alert alert-dismissable alert-@MessageType" style="display:@styleDisplayValue">
+                            <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+                            @message
+                        </div>
+                    }
                     <div class="box-content">
                         <div class="form-group input-cont">
                             <label for="textfield5" class="col-sm-3  control-label">Exam Type<span class="asterisk">*</span></label>
@@ -31,7 +53,7 @@
 
                         <div class="form-group last box-tooll">
                             <div class="col-sm-9 col-sm-offset-3 col-lg-7 col-lg-offset-2">
-                                <a href="@Url.Action("SchoolDashBoard", "School", new { id = new Guid(Session["id"].ToString()) })" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
+                                <a href="@Url.Action("GetExamType", "School", new { id = new Guid(Session["id"].ToString()) })" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
                                 <button id="btnadd" type="submit" class="btn btn-primary btn-success"><i class="fa fa-check green-i"></i><span> Submit</span></button>
                             </div>
                         </div>
