--- a/DigiChamps/Views/School/GetSubjectList.cshtml
+++ b/DigiChamps/Views/School/GetSubjectList.cshtml
@@ -4,6 +4,21 @@
     ViewBag.Title = "GetSchoolAdminList";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
+@{
+    string message = TempData.ContainsKey("Message") ? TempData["Message"].ToString() : string.Empty;
+    string styleDisplayValue = "none";
+    string MessageType = "success";
+    string mode = "";
+    if (!string.IsNullOrEmpty(message))
+    {
+        //MessageType = ViewBag.MessageType.ToString();
+        styleDisplayValue = "block";
+    }
+    else
+    {
+        styleDisplayValue = "none";
+    }
+}
 
 <form class="form-horizontal" id="validation-form">
 
@@ -16,9 +31,16 @@
                 <div class="box-title">
                     <h3><i class="fa fa-file"></i> Subject List </h3>
                     <div class="box-tool box-tooll">
-                        <a class="btn btn-primary" href="/School/CreateOrEditSubject/"><i class="fa fa-plus"></i><span> Add Subject List </span></a>
+                        <a class="btn btn-primary" href="/School/AddSubject/"><i class="fa fa-plus"></i><span> Add Subject List </span></a>
                     </div>
                 </div>
+                @if (!string.IsNullOrEmpty(@message))
+                {
+                    <div class="alert alert-dismissable alert-@MessageType" style="display:@styleDisplayValue">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+                        @message
+                    </div>
+                }
                 <div class="box-content">
                     <div class="table-responsive">
                         <table class="table table-advance" id="table1">
@@ -49,7 +71,7 @@
                                             @*<td>@item.EmailAddress</td>
                                             <td>@item.Password</td>*@
                                             <td>
-                                                @Html.ActionLink(" ", "CreateOrEditSubject", "School", new { id = @item.SubjectId }, new { @class = "btn btn-sm btn-primary fa fa-pencil", @title = "View" })
+                                                @Html.ActionLink(" ", "AddSubject", "School", new { id = @item.SubjectId }, new { @class = "btn btn-sm btn-primary fa fa-pencil", @title = "View" })
                                                 @Html.ActionLink(" ", "DeleteSubject", "School", new { id = @item.SubjectId }, new { @class = "btn btn-sm btn-danger show-tooltip fa fa-trash-o", @onclick = "return confirm('Are you sure want to delete the role type?')", @data_original_title = "Delete", @title = "Delete" })
 
 
