--- a/DigiChamps/Views/School/CreateOrEditCreateExam.cshtml
+++ b/DigiChamps/Views/School/CreateOrEditCreateExam.cshtml
@@ -1,136 +1,168 @@
-﻿
-
-@model DigiChamps.Models.SchoolModel.CreateExamModel
+﻿@model DigiChamps.Models.SchoolModel.CreateExamModel
 
 @{
-    ViewBag.Title = "Create Or Edit HomeWork";
+    ViewBag.Title = "Create Or Edit Exam";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
-<script src="~/Student_assets/crop/scripts/jquery.min.js"></script>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
 
 @using (Html.BeginForm("CreateOrEditCreateExam", "School", FormMethod.Post, new { @class = "form-horizontal", id = "validation-form" }))
 {
-<form class="form-horizontal" id="validation-form">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="box">
-                <div class="box-title">
-                    <h3><i class="fa fa-file"></i> CreateExam</h3>
+    <form class="form-horizontal" id="validation-form">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box">
+                    <div class="box-title">
+                        <h3><i class="fa fa-file"></i> CreateExam</h3>
 
-                </div>
-                <div class="box-content">
-
-                    <div class="form-group">
-                        <label for="textfield5" class="col-sm-3  control-label">Select Class<span class="asterisk">*</span></label>
-                        <div class="col-sm-9  controls">
-                            @if (ViewBag.Class_Id != null)
-                            {
-                                @(Html.DropDownListFor(x => x.ClassId, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
-                                @Html.HiddenFor(x => x.ClassId)
-                            }
-                            else
-                            {
-                                @(Html.DropDownListFor(x => x.ClassId, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
-                                @Html.ValidationMessageFor(x => x.ClassId)
-                            }
-
-
-
-
-                        </div>
                     </div>
+                    <div class="box-content">
 
-                    <div class="form-group">
-                        <label for="textfield5" class="col-sm-3  control-label">Select ExamType<span class="asterisk">*</span></label>
-                        <div class="col-sm-9  controls">
-                            @if (ViewBag.ExamType_Id != null)
-                            {
-                                @(Html.DropDownListFor(x => x.ExamType, ViewBag.ExamType_Id as SelectList, "Please Select ExamType", new { @class = "form-control", @id = "ddlExamType", data_rule_required = "true", data_msg_required = "Please Select ExamType" }))
-                                @Html.HiddenFor(x => x.ExamType)
-                            }
-                            else
-                            {
-                                @(Html.DropDownListFor(x => x.ExamType, ViewBag.ExamType_Id as SelectList, "Please Select ExamType", new { @class = "form-control", @id = "ddlExamType", data_rule_required = "true", data_msg_required = "Please Select ExamType" }))
-                                @Html.ValidationMessageFor(x => x.ExamType)
-                            }
+                        <div class="form-group">
+                            <label for="textfield5" class="col-sm-3  control-label">Select Class<span class="asterisk">*</span></label>
+                            <div class="col-sm-9  controls">
+                                @if (ViewBag.Class_Id != null)
+                                {
+                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
+                                    @Html.HiddenFor(x => x.Class_Id)
+                                }
+                                else
+                                {
+                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
+                                    @Html.ValidationMessageFor(x => x.Class_Id)
+                                }
 
 
 
 
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="textfield5" class="col-sm-3  control-label">Select Subject<span class="asterisk">*</span></label>
-                        <div class="col-sm-9  controls">
 
-                            @if (ViewBag.Subject_Id != null)
-                            {
-                                @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
-                                @Html.HiddenFor(x => x.SubjectId)
-                            }
-                            else
-                            {
-                                @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
-                                @Html.ValidationMessageFor(x => x.SubjectId)
-                            }
+                        <div class="form-group">
+                            <label for="textfield5" class="col-sm-3  control-label">Select ExamType<span class="asterisk">*</span></label>
+                            <div class="col-sm-9  controls">
+                                @if (ViewBag.ExamType_Id != null)
+                                {
+                                    @(Html.DropDownListFor(x => x.ExamType, ViewBag.ExamType_Id as SelectList, "Please Select ExamType", new { @class = "form-control", @id = "ddlExamType", data_rule_required = "true", data_msg_required = "Please Select ExamType" }))
+                                    @Html.HiddenFor(x => x.ExamType)
+                                }
+                                else
+                                {
+                                    @(Html.DropDownListFor(x => x.ExamType, ViewBag.ExamType_Id as SelectList, "Please Select ExamType", new { @class = "form-control", @id = "ddlExamType", data_rule_required = "true", data_msg_required = "Please Select ExamType" }))
+                                    @Html.ValidationMessageFor(x => x.ExamType)
+                                }
 
 
+
+
+                            </div>
                         </div>
-                    </div>
-                    
-                    <div class="form-group input-cont">
-                        <label for="textfield5" class="col-sm-3  control-label">Exam Date<span class="asterisk">*</span></label>
-                        <div class="col-sm-9  controls">
-                            @*<input type="text" name="EmailAddress" id="EmailAddress" value="@Model.StartDate" class="form-control" data-rule-required="true" data-msg-required="Please enter user name">*@
-                            <input type="text" placeholder="Plaese select date" class="form-control datepicker"  name="StartDate" autocomplete="off" data-rule-required="true" data-msg-required="Please select date" onkeypress="return false;" />
+                        <div class="form-group">
+                            <label for="textfield5" class="col-sm-3  control-label">Select Subject<span class="asterisk">*</span></label>
+                            <div class="col-sm-9  controls">
 
-                            @*@Html.DropDownListFor(x => x.Gender, new List<SelectListItem> { new SelectListItem { Text = "Male", Value = "Male" }, new SelectListItem { Text = "Female", Value = "Female" } }, " Select ", new { @class = "form-control", data_rule_required = "true", data_msg_required = "Please select gender" })
-                                @*}*@
+                                @if (ViewBag.Subject_Id != null)
+                                {
+                                    @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
+                                    @Html.HiddenFor(x => x.SubjectId)
+                                }
+                                else
+                                {
+                                    @(Html.DropDownListFor(x => x.SubjectId, ViewBag.Subject_Id as SelectList, "Please Select Subject", new { @class = "form-control", @id = "ddlSubject", data_rule_required = "true", data_msg_required = "Please select subject" }))
+                                    @Html.ValidationMessageFor(x => x.SubjectId)
+                                }
+
+
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group input-cont">
-                        <label for="textfield5" class="col-sm-3  control-label">Time Slot<span class="asterisk">*</span></label>
-                        <div class="col-sm-9 controls">
-
-                            <input type="text" name="TimeSlot" id="Password" placeholder="Select Time slot" class="timepicker" data-rule-required="true" data-msg-required="Please enter time">
-
+                        <div class="form-group input-cont">
+                            <label for="textfield5" class="col-sm-3  control-label">Exam Date<span class="asterisk">*</span></label>
+                            <div class="col-sm-9  controls">
+                                @*<input type="text" name="EmailAddress" id="EmailAddress" value="@Model.StartDate" class="form-control" data-rule-required="true" data-msg-required="Please enter user name">*@
+                                @*<input type="text" placeholder="Plaese select date" class="form-control datepicker"  name="StartDate" autocomplete="off" data-rule-required="true" data-msg-required="Please select date" onkeypress="return false;" />*@
+                                @Html.TextBoxFor(x => x.DateofExam, new { placeholder = "Plaese select date", @class = "form-control", @readonly = "readonly" })
+                                @Html.ValidationMessageFor(x => x.DateofExam)
+                                @*@Html.DropDownListFor(x => x.Gender, new List<SelectListItem> { new SelectListItem { Text = "Male", Value = "Male" }, new SelectListItem { Text = "Female", Value = "Female" } }, " Select ", new { @class = "form-control", data_rule_required = "true", data_msg_required = "Please select gender" })
+                                    @*}*@
+                            </div>
                         </div>
-                    </div>
-                    
 
+                        <div class="form-group input-cont">
+                            <label for="textfield5" class="col-sm-3  control-label">Time Slot<span class="asterisk">*</span></label>
+                            <div class="col-sm-9 controls">
 
+                                <input type="text" name="Starttimepicker" id="Starttimepicker" placeholder="Select Time slot" class="Starttimepicker" data-rule-required="true" data-msg-required="Please enter time">
+                                <input type="text" name="Endtimepicker" id="Endtimepicker" placeholder="Select Time slot" class="Endtimepicker" data-rule-required="true" data-msg-required="Please enter time">
+                                @Html.HiddenFor(x => x.TimeSlot)
 
-                    @*Crop image in modal*@
-
-
-                    <div class="form-group last box-tooll">
-                        <div class="col-sm-9 col-sm-offset-3 col-lg-7 col-lg-offset-2">
-                            <a href="@Url.Action("SchoolDashBoard", "School", new { id = new Guid(Session["id"].ToString()) })" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
-                            <button id="btnadd" type="submit" class="btn btn-primary btn-success"><i class="fa fa-check green-i"></i><span> Submit</span></button>
+                            </div>
                         </div>
+
+
+
+
+                        @*Crop image in modal*@
+
+
+                        <div class="form-group last box-tooll">
+                            <div class="col-sm-9 col-sm-offset-3 col-lg-7 col-lg-offset-2">
+                                <a href="@Url.Action("GetExam", "School", new { id = new Guid(Session["id"].ToString()) })" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
+                                <button id="btnaddExam" type="submit" class="btn btn-primary btn-success"><i class="fa fa-check green-i"></i><span> Submit</span></button>
+                            </div>
+                        </div>
+
+
                     </div>
-
-
                 </div>
             </div>
         </div>
-    </div>
 
-</form>
+    </form>
 }
+@*<script src="~/Student_assets/crop/scripts/jquery.min.js"></script>*@
 
-<script>
-    $('.timepicker').timepicker({
-        timeFormat: 'h:mm p',
-        interval: 60,
-        minTime: '10',
-        maxTime: '6:00pm',
-        startTime: '10:00',
-        dynamic: false,
-        dropdown: true,
-        scrollbar: true
-    });
-</script>
+@section scripts {
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    <script>
+        var isChanged = false;
+        $(document).ready(function () {
+            jQuery(document).ajaxStart(function () {
+                ajaxindicatorstart('loading data.. please wait..');
+            }).ajaxStop(function () {
+                ajaxindicatorstop();
+            });
+
+            $("#DateofExam").datepicker({
+                dateFormat: "dd/mm/yy",
+            });
+
+            $('.Starttimepicker').timepicker({
+                timeFormat: 'h:mm p',
+                interval: 60,
+                minTime: '10',
+                maxTime: '6:00pm',
+                startTime: '10:00',
+                dynamic: false,
+                dropdown: true,
+                scrollbar: true
+            });
+
+            $('.Endtimepicker').timepicker({
+                timeFormat: 'h:mm p',
+                interval: 60,
+                minTime: '10',
+                maxTime: '6:00pm',
+                startTime: '10:00',
+                dynamic: false,
+                dropdown: true,
+                scrollbar: true
+            });
+
+            $("#btnaddExam").click(function () {
+                $("#TimeSlot").val($("#Starttimepicker").val() + "-" + $("#Endtimepicker").val());
+            });
+        });
+    </script>
+}
