--- a/DigiChamps/Views/Shared/_SchoolLayout.cshtml
+++ b/DigiChamps/Views/Shared/_SchoolLayout.cshtml
@@ -79,23 +79,23 @@
             </li>
 
             @*@*<li class="user-profile">
-        <a data-toggle="dropdown" href="#" class="user-menu dropdown-toggle">
-            <img class="nav-user-photo" src="~/Images/images.png" alt="Penny's Photo" />
-            <span class="hhh" id="user_info">
+                    <a data-toggle="dropdown" href="#" class="user-menu dropdown-toggle">
+                        <img class="nav-user-photo" src="~/Images/images.png" alt="Penny's Photo" />
+                        <span class="hhh" id="user_info">
 
-            </span>
-            <i class="fa fa-caret-down"></i>
-        </a>
-        <!-- BEGIN User Dropdown -->
-        <ul class="dropdown-menu dropdown-navbar" id="user_menu">
+                        </span>
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <!-- BEGIN User Dropdown -->
+                    <ul class="dropdown-menu dropdown-navbar" id="user_menu">
 
-            <li class="divider"></li>
-            @*<li>
-                <a href="@Url.Action("AddSchoolAdmin", "Admin" )"><i class="fa fa-off"></i>Admin Profile</a>
-            </li>
-        </ul>
-        <!-- BEGIN User Dropdown -->
-    </li>*@
+                        <li class="divider"></li>
+                        @*<li>
+                            <a href="@Url.Action("AddSchoolAdmin", "Admin" )"><i class="fa fa-off"></i>Admin Profile</a>
+                        </li>
+                    </ul>
+                    <!-- BEGIN User Dropdown -->
+                </li>*@
             <!-- END Button User -->
         </ul>
         <!-- END Navbar Buttons -->
@@ -105,152 +105,159 @@
     </div>
     <div>
         <!-- BEGIN Sidebar -->
-        
-            <div id="sidebar" class="navbar-collapse collapse">
-                <!-- BEGIN Navlist -->
-                   <ul class="nav nav-list">
 
-                        <li class="active">
-                            <a href="@Url.Action("SchoolDashBoard", "School")">
-                                <i class="fa fa-dashboard"></i>
-                                <span>Dashboard</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/School/GetSchoolAdminList">
-                                <i class="fa fa-dashboard"></i>
-                                <span>Admin Profile</span>
-                            </a>
-                            <!-- BEGIN Submenu -->
-                            <!-- END Submenu -->
-                        </li>
+        <div id="sidebar" class="navbar-collapse collapse">
+            <!-- BEGIN Navlist -->
+            <ul class="nav nav-list">
 
-                       <li>
-                           <a href="/School/GetSchoolTeacherList">
-                               <i class="fa fa-dashboard"></i>
-                               <span>Teacher Profile</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                        
-                       <li>
-                           <a href="/School/GetSchoolPrincipleList">
-                               <i class="fa fa-dashboard"></i>
-                               <span>Principal profile</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
+                <li class="active">
+                    <a href="@Url.Action("SchoolDashBoard", "School")">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/School/GetSchoolAdminList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Admin Profile</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
 
-                       <li>
-                           <a href="/School/GetClassList">
-                               <i class="fa fa-dashboard"></i>
-                               <span>Create Class</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
+                <li>
+                    <a href="/School/GetSchoolTeacherList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Teacher Profile</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
 
+                <li>
+                    <a href="/School/GetSchoolPrincipleList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Principal profile</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
 
-                       <li>
-                           <a href="/School/GetSubjectList">
-                               <i class="fa fa-dashboard"></i>
-                               <span>Create Subject</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                       <li>
-                           <a href="/School/GetExamType">
-                               <i class="fa fa-dashboard"></i>
-                               <span> Exam Type </span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                       <li>
-                           <a href="/School/GetExam">
-                               <i class="fa fa-dashboard"></i>
-                               <span> Exam </span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-
-                       <li>
-                           <a href="/School/GetHomeWorkList">
-                               <i class="fa fa-dashboard"></i>
-                               <span>HomeWork</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-
-                       <li>
-                           <a href="/School/GetStudyMterial">
-                               <i class="fa fa-dashboard"></i>
-                               <span>Study Material</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
+                <li>
+                    <a href="/School/GetClassList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Create Class</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
 
 
-                       <li>
-                           <a href="/School/GetToppersWay">
-                               <i class="fa fa-dashboard"></i>
-                               <span> Toppers Way</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                       <li>
-                           <a href="/School/GetMessageList">
-                               <i class="fa fa-dashboard"></i>
-                               <span> Message </span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                       <li>
-                           <a href="/School/GetSchoolList">
-                               <i class="fa fa-dashboard"></i>
-                               <span> School List</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                       <li>
-                           <a href="/Admin/AdminDashBoard">
-                               <i class="fa fa-dashboard"></i>
-                               <span> Master Dashboard</span>
-                           </a>
-                           <!-- BEGIN Submenu -->
-                           <!-- END Submenu -->
-                       </li>
-                </ul>
+                <li>
+                    <a href="/School/GetSubjectList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Create Subject</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetExamType">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Exam Type </span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetExam">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Exam </span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetAllAssignedTeacherList">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Assign Teacher </span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetHomeWorkList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>HomeWork</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
 
-                <div id="sidebar-collapse" class="visible-lg">
-                    <i class="fa fa-angle-double-left"></i>
-                </div>
-                <!-- END Sidebar Collapse Button -->
+                <li>
+                    <a href="/School/GetStudyMterial">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Study Material</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+
+
+                <li>
+                    <a href="/School/GetToppersWay">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Toppers Way</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetMessageList">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Message </span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/School/GetSchoolList">
+                        <i class="fa fa-dashboard"></i>
+                        <span> School List</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
+                    <a href="/Admin/AdminDashBoard">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Master Dashboard</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+            </ul>
+
+            <div id="sidebar-collapse" class="visible-lg">
+                <i class="fa fa-angle-double-left"></i>
             </div>
+            <!-- END Sidebar Collapse Button -->
+        </div>
         }
         <!-- END Sidebar -->
         <!-- BEGIN Content -->
         <div id="main-content">
             @RenderBody()
             <!-- BEGIN Session check -->
-          
             <!-- END Session check -->
             @*<footer>
-                <p>2016 © Designed by NTSPL.</p>
-            </footer>*@
+                    <p>2016 © Designed by NTSPL.</p>
+                </footer>*@
             <a id="btn-scrollup" class="btn btn-circle btn-lg" href="#"><i class="fa fa-chevron-up"></i></a>
         </div>
 
-    </div>    <script src="~/assets/jquery/jquery-2.1.1.min.js"></script>
+    </div>
+    <script src="~/assets/jquery/jquery-2.1.1.min.js"></script>
     <script src="~/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="~/assets/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="~/assets/jquery-cookie/jquery.cookie.js"></script>
