Study material added.

--- a/DigiChamps/Views/Shared/_SchoolLayout.cshtml
+++ b/DigiChamps/Views/Shared/_SchoolLayout.cshtml
@@ -195,7 +195,7 @@
                 </li>
 
                 <li>
-                    <a href="/School/GetStudyMterial">
+                    <a href="/School/GetStudyMaterialList">
                         <i class="fa fa-dashboard"></i>
                         <span>Study Material</span>
                     </a>
