--- a/DigiChamps/Views/School/GetSchoolAdminList.cshtml
+++ b/DigiChamps/Views/School/GetSchoolAdminList.cshtml
@@ -63,7 +63,11 @@
                                         string imgSrc = System.IO.File.Exists(Server.MapPath(item.Image)) ? item.Image : string.Empty;
                                         <tr>
                                             <td>@(rowNo += 1)</td>
-                                            <td><img src="@imgSrc" style="width:50px;height:50px;" /></td>
+                                            <td>
+@if (!string.IsNullOrEmpty(imgSrc))
+{
+                                            <img src="@imgSrc" style="width:50px;height:50px;" />
+}</td>
                                             <td>@item.FirstName @item.LastName</td>
                                             <td style="display:none;">@item.SchoolId</td>
                                             <td style="display:none;">@item.Id</td>
