--- a/DigiChamps/Views/School/GetToppersWay.cshtml
+++ b/DigiChamps/Views/School/GetToppersWay.cshtml
@@ -2,7 +2,21 @@
     ViewBag.Title = "GetToppersWay";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
-
+@{
+    string message = TempData.ContainsKey("Message") ? TempData["Message"].ToString() : string.Empty;
+    string styleDisplayValue = "none";
+    string MessageType = "success";
+    string mode = "";
+    if (!string.IsNullOrEmpty(message))
+    {
+        //MessageType = ViewBag.MessageType.ToString();
+        styleDisplayValue = "block";
+    }
+    else
+    {
+        styleDisplayValue = "none";
+    }
+}
 @model IEnumerable<DigiChamps.Models.SchoolModel.ToppersWayModel>
 
 
@@ -18,9 +32,16 @@
                 <div class="box-title">
                     <h3><i class="fa fa-file"></i> Topper's Way</h3>
                     <div class="box-tool box-tooll">
-                        <a class="btn btn-primary" href="/School/CreateOrEditToppersWay/"><i class="fa fa-plus"></i><span> Add Topper's Way</span></a>
+                        <a class="btn btn-primary" href="/School/AddTopperWay/"><i class="fa fa-plus"></i><span> Add Topper's Way</span></a>
                     </div>
                 </div>
+                @if (!string.IsNullOrEmpty(@message))
+                {
+                    <div class="alert alert-dismissable alert-@MessageType" style="display:@styleDisplayValue">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+                        @message
+                    </div>
+                }
                 <div class="box-content">
                     <div class="table-responsive">
                         <table class="table table-advance" id="table1">
@@ -53,8 +74,8 @@
                                             <td style="display:none;">@item.Id</td>
 
                                             <td>
-                                                @Html.ActionLink(" ", "CreateOrEditCreateExam", "School", new { id = @item.Id }, new { @class = "btn btn-sm btn-primary fa fa-pencil", @title = "View" })
-                                                @Html.ActionLink(" ", "DeleteExamType", "School", new { id = @item.Id }, new { @class = "btn btn-sm btn-danger show-tooltip fa fa-trash-o", @onclick = "return confirm('Are you sure want to delete the role type?')", @data_original_title = "Delete", @title = "Delete" })
+                                                @Html.ActionLink(" ", "AddTopperWay", "School", new { id = @item.Id }, new { @class = "btn btn-sm btn-primary fa fa-pencil", @title = "View" })
+                                                @Html.ActionLink(" ", "DeleteTopperWay", "School", new { id = @item.Id }, new { @class = "btn btn-sm btn-danger show-tooltip fa fa-trash-o", @onclick = "return confirm('Are you sure want to delete the role type?')", @data_original_title = "Delete", @title = "Delete" })
 
 
                                             </td>
