Change for period

--- a/DigiChamps/Views/Shared/_SchoolLayout.cshtml
+++ b/DigiChamps/Views/Shared/_SchoolLayout.cshtml
@@ -178,6 +178,14 @@
                     <!-- END Submenu -->
                 </li>
                 <li>
+                    <a href="/School/GetPeriodList">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Create Period </span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
+                <li>
                     <a href="/School/GetAllAssignedTeacherList">
                         <i class="fa fa-dashboard"></i>
                         <span> Assign Teacher </span>
