Latest application code.

--- a/DigiChamps/Views/School/AddPeriod.cshtml
+++ b/DigiChamps/Views/School/AddPeriod.cshtml
@@ -31,7 +31,7 @@
                 <div class="box-title">
                     <h3>
                         <i class="fa fa-file"></i>
-                        Add School
+                        Add Period
 
                     </h3>
                 </div>
@@ -116,7 +116,10 @@
             autoclose: true
         });
 
-
+        var input = $('#timepicker_end');
+        input.clockpicker({
+            autoclose: true
+        });
     });
 
 
