--- a/DigiChamps/Views/School/AddSubject.cshtml
+++ b/DigiChamps/Views/School/AddSubject.cshtml
@@ -65,7 +65,7 @@
 
                     <div class="form-group last box-tooll">
                         <div class="col-sm-9 col-sm-offset-3 col-lg-7 col-lg-offset-2">
-                            <a href="@Url.Action("SchoolDashBoard", "School", new { id = new Guid(Session["id"].ToString()) })" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
+                            <a href="@Url.Action("GetSubjectList", "School")" class="btn btn-primary"><i class="fa fa-undo"></i> <span>Back</span> </a>
                             <button id="btnadd" type="submit" class="btn btn-primary btn-success"><i class="fa fa-check green-i"></i><span> Submit</span></button>
                         </div>
                     </div>
