--- a/DigiChamps/Views/Shared/_SchoolLayout.cshtml
+++ b/DigiChamps/Views/Shared/_SchoolLayout.cshtml
@@ -177,6 +177,15 @@
                     <!-- BEGIN Submenu -->
                     <!-- END Submenu -->
                 </li>
+
+                <li>
+                    <a href="/School/GetTimeTableList">
+                        <i class="fa fa-dashboard"></i>
+                        <span> Time Table</span>
+                    </a>
+                    <!-- BEGIN Submenu -->
+                    <!-- END Submenu -->
+                </li>
                 <li>
                     <a href="/School/GetPeriodList">
                         <i class="fa fa-dashboard"></i>
@@ -210,7 +219,6 @@
                     <!-- BEGIN Submenu -->
                     <!-- END Submenu -->
                 </li>
-
 
                 <li>
                     <a href="/School/GetToppersWay">
