--- a/DigiChamps/Views/School/CreateOrEditCreateExam.cshtml
+++ b/DigiChamps/Views/School/CreateOrEditCreateExam.cshtml
@@ -21,20 +21,10 @@
                         <div class="form-group">
                             <label for="textfield5" class="col-sm-3  control-label">Select Class<span class="asterisk">*</span></label>
                             <div class="col-sm-9  controls">
-                                @if (ViewBag.Class_Id != null)
-                                {
-                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
-                                    @Html.HiddenFor(x => x.Class_Id)
-                                }
-                                else
-                                {
-                                    @(Html.DropDownListFor(x => x.Class_Id, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
-                                    @Html.ValidationMessageFor(x => x.Class_Id)
-                                }
 
-
-
-
+                                @(Html.DropDownListFor(x => x.Class_Id, ViewBag.Class_Id as SelectList, "Please Select Class", new { @class = "form-control", @id = "ddlClass", data_rule_required = "true", data_msg_required = "Please select class" }))
+                                @Html.HiddenFor(x => x.Class_Id)
+                                @Html.ValidationMessageFor(x => x.Class_Id)
                             </div>
                         </div>
 
@@ -90,11 +80,11 @@
 
                         <div class="form-group input-cont">
                             <label for="textfield5" class="col-sm-3  control-label">Time Slot<span class="asterisk">*</span></label>
-                            <div class="col-sm-9 controls">
+                            <div class="col-sm-9 controls" id="basicExample">
 
                                 <input type="text" name="Starttimepicker" id="Starttimepicker" placeholder="Select Time slot" class="Starttimepicker" data-rule-required="true" data-msg-required="Please enter time">
                                 <input type="text" name="Endtimepicker" id="Endtimepicker" placeholder="Select Time slot" class="Endtimepicker" data-rule-required="true" data-msg-required="Please enter time">
-                                @Html.HiddenFor(x => x.TimeSlot)                                
+                                @Html.HiddenFor(x => x.TimeSlot)
                             </div>
                         </div>
 
@@ -120,10 +110,17 @@
     </form>
 }
 @*<script src="~/Student_assets/crop/scripts/jquery.min.js"></script>*@
-
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+@*<link rel="stylesheet" type="text/css" href="https://jonthornton.github.io/jquery-timepicker/jquery.timepicker.css" />*@
 @section scripts {
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    @*<script src="http://jonthornton.github.io/Datepair.js/dist/datepair.js"></script>
+    <script src="http://jonthornton.github.io/Datepair.js/dist/jquery.datepair.js"></script>*@
+
+@*<script src="https://jonthornton.github.io/jquery-timepicker/jquery.timepicker.js"></script>
+<script src="http://jonthornton.github.io/Datepair.js/dist/datepair.js"></script>*@
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         var isChanged = false;
         $(document).ready(function () {
@@ -133,8 +130,15 @@
                 ajaxindicatorstop();
             });
 
+            //$("#DateofExam").datepicker({
+            //    dateFormat: "dd/mm/yy",
+            //    //format: 'mm-dd-yyyy',
+            //    minDate:new Date(),
+            //    autoclose: true
+            //});
+            //$('#DateofExam').datetimepicker({  minDate:new Date()});
             $("#DateofExam").datepicker({
-                dateFormat: "dd/mm/yy",
+                minDate:0
             });
 
             $('.Starttimepicker').timepicker({
@@ -159,9 +163,36 @@
                 scrollbar: true
             });
 
+            //$('.Starttimepicker').timepicker({
+            //    'showDuration': true,
+            //    'timeFormat': 'g:ia'
+            //});
+            //$('.Endtimepicker').timepicker({
+            //    'showDuration': true,
+            //    'timeFormat': 'g:ia'
+            //});
+
+            //var basicExampleEl = document.getElementById('basicExample');
+            //var datepair = new Datepair(basicExampleEl);
+
             $("#btnaddExam").click(function () {
                 $("#TimeSlot").val($("#Starttimepicker").val() + "-" + $("#Endtimepicker").val());
             });
+
+
+            //$('#datepairExample .time').timepicker({
+            //    'showDuration': true,
+            //    'timeFormat': 'g:ia'
+            //});
+
+            //$('#datepairExample .date').datepicker({
+            //    'format': 'm/d/yyyy',
+            //    'autoclose': true
+            //});
+
+            //$('#datepairExample').datepair();
+
+
         });
     </script>
 }
