--- a/DigiChamps/Views/School/GetExamType.cshtml
+++ b/DigiChamps/Views/School/GetExamType.cshtml
@@ -32,7 +32,7 @@
                 <div class="box-title">
                     <h3><i class="fa fa-file"></i> Exam Type List </h3>
                     <div class="box-tool box-tooll">
-                        <a class="btn btn-primary" href="/School/ExamType/"><i class="fa fa-plus"></i><span> Add Exam</span></a>
+                        <a class="btn btn-primary" href="/School/ExamType/"><i class="fa fa-plus"></i><span> Add Exam Type</span></a>
                     </div>
                 </div>
                 @if (!string.IsNullOrEmpty(@message))
